Fix smooth-scroll and snap-align

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,7 +56,7 @@ section {
   
   
   &.snap-start {
-    scroll-snap-align: start;
+    scroll-snap-align: center;
   }
 
   &.snap-none {
