--- a/src/components/Portfolio/Portfolio.styles.scss
+++ b/src/components/Portfolio/Portfolio.styles.scss
@@ -31,7 +31,7 @@
 
   section {
     .snap-start {
-      scroll-snap-align: start;
+      scroll-snap-align: center;
     }
   }
 
